tests/baselines/reference/genericTypeReferenceWithoutTypeArgument2.errors.txt
==== tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument2.ts (24 errors) ====
    // it is an error to use a generic type without type arguments
    // all of these are errors 
    
    interface I<T> {
        foo: T;
    }
    
    var c: I;
           ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    
    var a: { x: I };
                ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    var b: { (x: I): I };
                 ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
                     ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    var d: { [x: I]: I };
              ~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
                 ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
                     ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    
    var e = (x: I) => { var y: I; return y; }
                ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
                               ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    
    function f(x: I): I { var y: I; return y; }
                  ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
                      ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
                                 ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    
    var g = function f(x: I): I { var y: I; return y; }
                          ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
                              ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
                                         ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    
    class D extends I {
                    ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    }
    
    interface U extends I {}
                        ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    
    module M {
        export interface E<T> { foo: T }
    }
    
    class D2 extends M.C { }
                     ~~~
!!! error TS2305: Module 'M' has no exported member 'C'.
    interface D3<T extends M.E> { }
                           ~~~
!!! error TS2314: Generic type 'E<T>' requires 1 type argument(s).
    interface I2 extends M.C { }
                         ~~~
!!! error TS2305: Module 'M' has no exported member 'C'.
    
    function h<T extends I>(x: T) { }
                         ~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
    function i<T extends M.E>(x: T) { }
                         ~~~
!!! error TS2314: Generic type 'E<T>' requires 1 type argument(s).
    
    var j = <C>null;
             ~
!!! error TS2304: Cannot find name 'C'.
    var k = <M.E>null;
             ~~~
!!! error TS2314: Generic type 'E<T>' requires 1 type argument(s).